k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: interview-api-svc
  namespace: default
spec:
  selector:
    app: interview-api
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
